# detachment

./: .gitignore  README.md  flake.nix  pyproject.toml
detachment/: __init__.py  agent.py  bluez.py  capture.py  config.py  evdev_hid.py  geometry.py  hid.py  hidd.py  led.py  reset.py  shortcuts.py  tray.py  websettings.py
detachment/web/: app.js  index.html  style.css
docs/: history.md
nix/: module.nix  package.nix  snegg.nix
scripts/: led-test.sh  reset-bt.sh
